add pip install, expand variable to the complete dataset

--- a/APD_EDA.ipynb
+++ b/APD_EDA.ipynb
@@ -75,7 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "a89b7f59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e4fe6758",
    "metadata": {},
    "outputs": [],
@@ -132,7 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "5d76da7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.colab import drive\n",
+    "# drive.mount(\"/content/drive\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f1df7cb6",
    "metadata": {
     "lines_to_next_cell": 1
@@ -156,7 +177,11 @@
     "# -----------------------------\n",
     "# File Path Configuration\n",
     "# -----------------------------\n",
-    "DATASET_DIR = \"./SSAC-UNPC\"\n",
+    "\n",
+    "if os.path.exists(\"/content/drive/MyDrive\"):\n",
+    "    DATASET_DIR = Path(\"/content/drive/MyDrive/datasets/SSAC-UNPC\")\n",
+    "else:\n",
+    "    DATASET_DIR = \"../SSAC-UNPC\"\n",
     "\n",
     "# -----------------------------\n",
     "# Analysis Sample Sizes\n",
@@ -164,24 +189,43 @@
     "# These control how much data we analyze at each level\n",
     "# Smaller values = faster execution, larger values = more accurate statistics\n",
     "\n",
+    "# SAMPLE_SIZES = {\n",
+    "#     'basic_exploration': 10,           # Number of lines for initial peek\n",
+    "#     'line_count': None,                # None = count all lines (can be slow)\n",
+    "#     'random_samples': 20,              # Number of random samples to display\n",
+    "#     'sentence_length': 500_000,        # Samples for length distribution\n",
+    "#     'punctuation_frequency': 1_000_000, # Samples for punctuation counting\n",
+    "#     'sentence_terminals': 500_000,     # Samples for terminal analysis\n",
+    "#     'vocabulary': 500_000,             # Samples for word frequency\n",
+    "#     'punctuation_context': 200_000,    # Samples for context analysis\n",
+    "#     'ngrams': 200_000,                 # Samples for n-gram analysis\n",
+    "#     'pos_analysis': 10_000,            # Samples for POS tagging (slow)\n",
+    "#     'class_imbalance': 1_000_000,      # Samples for class distribution\n",
+    "#     'length_punct_relationship': 500_000,  # Samples for length analysis\n",
+    "#     'topic_analysis': 50_000,          # Samples for topic modeling\n",
+    "#     'character_analysis': 1_000_000,   # Samples for character analysis\n",
+    "#     'preprocessing_recommendations': 100_000,  # Samples for recommendations\n",
+    "#     'tokenizer_comparison': 10_000,    # Samples for tokenizer analysis\n",
+    "#     'feature_correlation': 100_000,    # Samples for correlation analysis\n",
+    "# }\n",
     "SAMPLE_SIZES = {\n",
     "    'basic_exploration': 10,           # Number of lines for initial peek\n",
     "    'line_count': None,                # None = count all lines (can be slow)\n",
     "    'random_samples': 20,              # Number of random samples to display\n",
-    "    'sentence_length': 500_000,        # Samples for length distribution\n",
-    "    'punctuation_frequency': 1_000_000, # Samples for punctuation counting\n",
-    "    'sentence_terminals': 500_000,     # Samples for terminal analysis\n",
-    "    'vocabulary': 500_000,             # Samples for word frequency\n",
-    "    'punctuation_context': 200_000,    # Samples for context analysis\n",
-    "    'ngrams': 200_000,                 # Samples for n-gram analysis\n",
+    "    'sentence_length': 11_731_360,        # Samples for length distribution\n",
+    "    'punctuation_frequency': 11_731_360, # Samples for punctuation counting\n",
+    "    'sentence_terminals': 11_731_360,     # Samples for terminal analysis\n",
+    "    'vocabulary': 11_731_360,             # Samples for word frequency\n",
+    "    'punctuation_context': 11_731_360,    # Samples for context analysis\n",
+    "    'ngrams': 11_731_360,                 # Samples for n-gram analysis\n",
     "    'pos_analysis': 10_000,            # Samples for POS tagging (slow)\n",
-    "    'class_imbalance': 1_000_000,      # Samples for class distribution\n",
-    "    'length_punct_relationship': 500_000,  # Samples for length analysis\n",
+    "    'class_imbalance': 11_731_360,      # Samples for class distribution\n",
+    "    'length_punct_relationship': 11_731_360,  # Samples for length analysis\n",
     "    'topic_analysis': 50_000,          # Samples for topic modeling\n",
-    "    'character_analysis': 1_000_000,   # Samples for character analysis\n",
-    "    'preprocessing_recommendations': 100_000,  # Samples for recommendations\n",
+    "    'character_analysis': 11_731_360,   # Samples for character analysis\n",
+    "    'preprocessing_recommendations': 11_731_360,  # Samples for recommendations\n",
     "    'tokenizer_comparison': 10_000,    # Samples for tokenizer analysis\n",
-    "    'feature_correlation': 100_000,    # Samples for correlation analysis\n",
+    "    'feature_correlation': 11_731_360,    # Samples for correlation analysis\n",
     "}\n",
     "\n",
     "# -----------------------------\n",
@@ -4260,6 +4304,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "71e94507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install camel-tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ddbbbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%camel_data -i morphology-db-msa-r13"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "0bd7cc36",
    "metadata": {
@@ -6830,6 +6894,16 @@
     "**Why it matters:** Tokenizer choice significantly affects model performance.\n",
     "\n",
     "**Note:** This analysis requires the transformers library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "138ccfc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install transformers"
    ]
   },
   {
