Add personal notes and semi results analyses

--- a/finetuning.ipynb
+++ b/finetuning.ipynb
@@ -3490,17 +3490,10 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "L-Tc0cQMZWdX"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "#تشغيل التجارب\n",
         "\n",
-        "##هذه الخلية تقوم بتشغيل جميع التجارب"
+        "##هذه الخلية تقوم بتشغيل جميع التجارب مع معيار المستخدم بالنسبة لـ POS"
       ],
       "metadata": {
         "id": "YZamLdbOZaZs"
@@ -7192,6 +7185,15 @@
         "print(\"\\nاكتملت جميع التجارب!\")\n",
         "print(f\"عدد التجارب المكتملة: {len(results)}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## تجريب النماذج بعكس التجربة السابقة بالنسبة لـ POS\n"
+      ],
+      "metadata": {
+        "id": "cbSmEVBIIeWh"
+      }
     },
     {
       "cell_type": "code",
@@ -11797,6 +11799,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### نتائج التشغيل و تفصيل نصي\n",
+        "\n",
+        "أظهرت النتائج تفوق النماذج المدربة على POS على النماذج التي بدونها على قياسات الدقة و Weighted F1\n",
+        "\n",
+        "في حين كانت أقل على قياس macro F1\n",
+        "\n",
+        "تظهر النتائج جلية و واضحة مع مقارنة بداية عملية التعلم على النماذج .. حيث الفرق فعلاً كان واضحاً كما يظهر من المنحنيات التدريبية للدقة و الخسارة على كلا النموذجين\n",
+        "\n",
+        "\n",
+        "يتضح في ذلك أثر ال POS على نماذج قليلة من البيانات في دعم عملية التعميم لدى النماذج\n",
+        "\n",
+        "كما تظهر قوة النماذج المدروسة على سرعة تعلمها من البيانات العربية و استنتاجها النمط ولو بدون وجود POS عندما تبدأ عملية التعلم بالتوسع و التعرض لبيانات أكثر"
+      ],
+      "metadata": {
+        "id": "MTgqTs1sHmOy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#عرض ملخص النتائج\n",
         "\n",
         "##هذه الخلية تعرض ملخصاً لجميع النتائج"
@@ -12234,6 +12256,27 @@
         "print(\"تم إغلاق الجلسة بنجاح\")\n",
         "print(\"=\" * 60)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TODOs:\n",
+        "\n",
+        " * تدريب أكثف للنماذج المقترحة\n",
+        " * إظهار نتائج الفروقات المربعة بين كل تدريبين مشتركين بخصيصة\n",
+        " * عرض إحصائي أكبر و تجريبي للنماذج و إظهار الأسباب التي جعلتها تجيد / تخفق في تصنيف بعض العلامات كما سبق من الدراسة الإحصائية للبيانات\n",
+        " * دراسة النتائج مع LLM من خلال تدريب الأوامر.\n",
+        " * تجريب نماذج أكثر و دراسة مواطن قوتها عموماً و ربطها بنتائج نقل التعليم الحاصل عليها\n",
+        " * تطبيق أنابيب لتدفق البيانات عليها\n",
+        " * تجريب خيارات POS أكثر و دراسة تأثيرها على النتائج\n",
+        " * إتاحة النموذج للتجريب\n",
+        " * دراسة تفصيلية أكبر للنماذج المشابهة و الظروف التدريبية\n",
+        " فيها\n",
+        "* إدارة أفضل للسجلات و صور العرض ضمن الملف\n"
+      ],
+      "metadata": {
+        "id": "cc9RGpPKI4v5"
+      }
     }
   ],
   "metadata": {
